# workflow-vision-agent

./: .gitignore  README.md  SETUP_API_KEY.md  apps.yaml  example_ai_agent.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/agent/: __init__.py  llm_controller.py  navigator.py  state_capture.py  workflow_executor.py
src/api/: __init__.py  app.py
src/models/: __init__.py  schemas.py
src/storage/: __init__.py  dataset_manager.py
tests/: test_cnn_subscribe.py  test_disney_plus_new.py  test_linear.py  test_notion.py
workflow_vision_agent/: __init__.py  browser_controller.py  main.py
workflow_vision_agent/actions/: __init__.py  executor.py
workflow_vision_agent/ai/: __init__.py  llm_client.py  prompts.py
workflow_vision_agent/browser/: __init__.py
workflow_vision_agent/elements/: __init__.py  finder.py
workflow_vision_agent/orchestrator/: __init__.py  workflow_orchestrator.py
workflow_vision_agent/parser/: __init__.py  task_parser.py
workflow_vision_agent/state/: __init__.py  detector.py  screenshot_manager.py
workflow_vision_agent/tests/: __init__.py  test_actions.py  test_browser.py  test_elements.py  test_orchestrator.py  test_parser.py  test_state.py
